--- a/sdmcoletor/webapp/view/App.view.xml
+++ b/sdmcoletor/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View
+<!-- <mvc:View
     controllerName="sdmcoletor.controller.App"
     displayBlock="true"
     xmlns="sap.m"
@@ -11,4 +11,16 @@
             busyIndicatorDelay="{appView>/delay}"/>
     </Shell>
 
+</mvc:View>  -->
+
+<mvc:View
+    controllerName="sdmcoletor.controller.App"
+    displayBlock="true"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc">
+
+    <App
+        id="app"
+        busy="{appView>/busy}"
+        busyIndicatorDelay="{appView>/delay}" />
 </mvc:View>
